# food_imports_db

./: Cargo.toml  README.md  products.db  products.db-shm  products.db-wal
migrations/: 20230101000000_init.sql
src/: code_generator.rs  data_collector.rs  database.rs  inventory_manager.rs  main.rs  models.rs
src/web/: dashboard.html  mod.rs
