[package]
name = "food_imports_db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.7"
env_logger = "0.11.8"